--- a/style.css
+++ b/style.css
@@ -1,3 +1,19 @@
+*{
+    margin: 0;
+    padding: 0;
+}
+.nav{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    background-color: #191a1c;
+    color: white;
+    margin-bottom: 30px;
+    height: 60px;
+    font-size: 40px;
+}
+
 .claculator {
     display: grid;
     grid-template-rows: 70px 1fr;
@@ -73,4 +89,29 @@ button:hover {
 
 .operator{
     display: none;
+}
+
+.footer{
+    display: flex;
+    width: 100%;
+    height: 40px;
+    font-size: 12px;
+    font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(24, 23, 23);
+    gap: 40px;
+    color: white;
+    margin-top: auto;
+  }
+  a {
+    text-decoration: none;
+  }
+  .fab{
+    color: rgb(255, 254, 254);
+  }
+  .main {
+    height: 100vh;    
+    display: flex;
+    flex-direction: column;
 }
